# PQC

./: .dockerignore  .gitignore  CMakeLists.txt  PRD.md  README.md
.github/plans/: plan-quantumSafeGrpcPqc.prompt.md  prd_codebase_knowledge_builder_2dfde023.plan.md
.github/prompts/: plan-quantumSafeGrpcPqc.prompt.md
.github/skills/agent/: SKILL.md
.github/skills/async/: SKILL.md
.github/skills/batch/: SKILL.md
.github/skills/chunking/: SKILL.md
.github/skills/communication/: SKILL.md
.github/skills/embedding/: SKILL.md
.github/skills/flow/: SKILL.md
.github/skills/frontend-design/: SKILL.md
.github/skills/llm/: SKILL.md
.github/skills/mapreduce/: SKILL.md
.github/skills/multi-agent/: SKILL.md
.github/skills/node/: SKILL.md
.github/skills/parallel/: SKILL.md
.github/skills/prd/: SKILL.md
.github/skills/rag/: SKILL.md
.github/skills/structure/: SKILL.md
.github/skills/text-to-speech/: SKILL.md
.github/skills/vector/: SKILL.md
.github/skills/viz/: SKILL.md
.github/skills/websearch/: SKILL.md
.github/skills/workflow/: SKILL.md
.github/workflows/: ci.yml
cmake/: FindOpenSSL35.cmake
common/: CMakeLists.txt
common/include/common/: cert_loader.h  tls_config.h  tls_metrics.h
common/src/: cert_loader.cpp  tls_config.cpp  tls_metrics.cpp
docker/: Dockerfile  docker-compose.yml
docs/: BUILD.md  DEPENDENCIES.md  PQC_FAQ.md  STATUS_THROUGH_TASK5.md
proto/: CMakeLists.txt  service_a.proto  service_b.proto
scripts/: check_installed_versions.sh  generate_mldsa_certs.sh  generate_rsa_certs.sh  install_grpc_deps.sh  install_openssl.sh  tls_groups_check.sh  validate_tls.sh  validate_tls_fallback.sh
service_a/: CMakeLists.txt
service_a/include/service_a/: service_a_impl.h
service_a/src/: main.cpp  service_a_impl.cpp
service_b/: CMakeLists.txt
service_b/include/service_b/: service_b_impl.h
service_b/src/: main.cpp  service_b_impl.cpp
tasks/: tasks-quantum-safe-grpc-pqc.md
tests/: CMakeLists.txt  test_cert_loading.cpp  test_fallback.cpp  test_legacy_rsa_client.cpp  test_metrics.cpp  test_tls_handshake.cpp
